Release 5.1.7 (unreleased)
==========================

Bug fixes
---------

- Fix for time moment which start is defined by a time value equal or close to
  a time step value.

- Fix bug in wall distance initialization for restarts with k-omega SST model.

- Fix memory leaks in parameters check.

- Fix in GUI for gas combustion model. Use variable name instead of label to get
  numerical scheme.

- Lagrangian module: fix division by 0 in boundary stats.


Release 5.1.6 (October 26 2018)
===============================

This is the last release of the 5.1 series.

Bug fixes
---------

- Fix allocation of pmappers to scalar fields in atmospheric aerosols model.

- Fix allocation size for values at injection in case of mass source terms
  with coupled Reynolds stress solver.

- GUI: fix missing update of modified scalar names for groundwater flows.

- GUI: fix loss of previous deactivated wall function setting when reopened.

- trackcvg: allow saving state only when data is loaded and loading it when
  saved state is present.

- CFDStudy: allow loading studies with no MESH or POST subdirectories.

- Fix improved hydrostatic treatment and PISO-like iterations
  (nterup > 1 and iphydr = 1).

Release 5.1.5 (Sep 26 2018)
===========================

Bug fixes
---------

- Fixes to atmospheric chemistry model.

- Lagrangian module: fix resuspension when having internal deposition.

- Compressible model: fix inverted arguments for user velocity source terms.

- Radiative model: fix GUI-defined prescribed flux BC for grey/black wall.

- Fix minor memory leak in histogram output.

- GUI: fix various crashes with th PyQt API 2(mostly on systems using PyQt5,
  as these default to the concerned API).

- GUI: fixes for addition and handling of coal classes.

- GUI: "rij" (coupled) field must return a NULL pointer for uncoupled RSM
  if initilization of turbulent variables is set by formula.

- Fix an uninitialised option (reconstruction flag) if arakawa coef. is 0 and